--- a/tyu.html
+++ b/tyu.html
@@ -23,7 +23,7 @@
     <main>
         <section id="home">
             <h2>首頁</h2>
-            <p>目前就讀海洋大學資訊工程學系，喜歡打遊戲、打排球、聽音樂、看動漫，想要跟我玩都可以聯絡我。</p>
+            <p>目前就讀海洋大學資訊工程學系，目前會的程式為C++，正在學習如何做Web，喜歡打遊戲、打排球、聽音樂、看動漫。</p>
         </section>
         <section id="about">
             <h2>關於我</h2>
@@ -42,17 +42,19 @@
                                 class="n-img"></a></td>
                     <td><a href="https://www.instagram.com/ibp4000/"><img src="Instagram_logo_2016.svg.webp"
                                 class="n-img"></a></td>
+                    <td><a href="https://github.com/tyuLD"><img src="下載.jpg" class="n-img"></a></td>
                 </tr>
                 <tr>
-                    <td>discord</td>
-                    <td>facebook</td>
-                    <td>instagram</td>
+                    <td>Discord</td>
+                    <td>Facebook</td>
+                    <td>Instagram</td>
+                    <td>Github</td>
                 </tr>
             </table>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 我的個人博客</p>
+        <p>&copy; 2024</p>
     </footer>
 </body>
 
