--- a/tyu.html
+++ b/tyu.html
@@ -31,10 +31,14 @@
         <!-- <section id="about"> -->
         <div class="about-container" style="margin-bottom: 30px;">
             <img src="皮卡丘.jpg" alt="我的圖片" class="about-img">
-            <p>王鈞宇(tyu)<br>目前就讀海洋大學資訊工程學系，是一個喜歡看動漫、打遊戲的人，立志成為一個軟體工程師，早早財富自由。</p>
+
+            <div>
+                <h3>王鈞宇(tyu)</h3>
+                <p>目前就讀海洋大學資訊工程學系，是一個喜歡看動漫、打遊戲的人，立志成為一個軟體工程師，早早財富自由。</p>
+            </div>
         </div>
         <!-- </section> -->
-        <section id="about-part2" style="border-radius: 10%;">
+        <section id="about" style="border-radius: 10%;">
             <div class="container">
                 <div class="box-1">
                     <h3>Ability</h3>
