--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
     </header>
 
     <main>
-        <div class="container-sticky">
-            <div class="banner" id="home">
+        <section class="container-sticky">
+            <div class="index-bg  bg0" id="home">
                 <div class="quote">
                     <p class="title-p">歡迎來到tyu的網站</p>
                 </div>
             </div>
 
             <!-- <section id="about"> -->
-            <section class="bg1">
-                <div class="about-container" style="margin-bottom: 30px;">
+            <div class="index-bg bg1" style="background-attachment: fixed">
+                <div class="about-container" id="about">
                     <img src="皮卡丘.jpg" alt="我的圖片" class="about-img">
                     <div>
                         <h3>王鈞宇(tyu)</h3>
                         <p>目前就讀海洋大學資訊工程學系，是一個喜歡看動漫、打遊戲的人，立志成為一個軟體工程師，早早財富自由。</p>
                     </div>
                 </div>
-            </section>
+            </div>
             <!-- </section> -->
-            <section class="bg2">
-                <section id="about" style="border-radius: 10%;">
+            <div class="index-bg bg2" style="background-attachment: fixed">
+                <section>
                     <div class="container">
                         <div class="box-1">
                             <h3>Ability</h3>
@@ -57,9 +57,9 @@
                         </div>
                     </div>
                 </section>
-            </section>
+            </div>
 
-        </div>
+        </section>
     </main>
     <footer>
         <div class="waves">
@@ -76,7 +76,7 @@
             <li> <a href="https://github.com/tyuLD"><ion-icon name="logo-github"></ion-icon></a></li>
         </ul>
 
-        <p> @2024 tyu的網站</p>
+        <p> 2024 tyu的網站</p>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
